syntax = "proto3";

option java_generic_services = true;
option java_multiple_files = true;
option java_package = "com.micro.paperPCMemberServe.proto";
option java_outer_classname = "paperPCMemberProto";

service PaperPCMemberService {
  rpc getPapersInfo (GetPapersInfoRequest) returns (GetPapersInfoResponse);
}

message GetPapersInfoRequest {
  int32 userId = 1;
  int32 conferenceId = 2;
}

message GetPapersInfoResponse {
  repeated int32 paperId = 1;
  repeated int32 state = 2;
}